ros2_moveit_franka/log/build_2025-05-29_00-01-10/ros2_moveit_franka/stderr.log
  File "/home/labelbox/projects/moveit/lbx-Franka-Teach/ros2_moveit_franka/install/ros2_moveit_franka/lib/python3.10/site-packages/ros2_moveit_franka/simple_arm_control.py", line 1110
    else:
    ^^^^
SyntaxError: expected 'except' or 'finally' block

